Move to SpringBoot 2.6.5